<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_top_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/theme_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/right_middle_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.3">

        <TextView
            android:id="@+id/pie_title1"
            style="@style/SubTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/right_top1_sub_title"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toLeftOf="@id/pie_title2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_right_top1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/chart_right_top2"
            app:layout_constraintTop_toBottomOf="@id/pie_title1" />

        <TextView
            android:id="@+id/pie_title2"
            style="@style/SubTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/right_top2_sub_title"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/pie_title1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_right_top2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/chart_right_top1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pie_title2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--android:background="@drawable/panel_right_middle"
       android:background="@drawable/title_bg"-->
    <LinearLayout
        android:id="@+id/right_middle_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/theme_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/right_bottom_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/right_top_ll"
        app:layout_constraintVertical_weight="0.3">

        <TextView
            style="@style/SubTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/right_middle_sub_title"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_right_middle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/theme_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/right_middle_ll"
        app:layout_constraintVertical_weight="0.4">

        <TextView
            style="@style/SubTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/right_bottom_sub_title"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_right_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
